# HaskellCoreUtils

./: .gitignore  Utils.hs  comm.hs  more.hs  readme.md  utils.hs
HaskellCoreUtils/: HaskellCoreUtils.cabal
HaskellCoreUtils/src/: cat.hs  comm.hs  head.hs  hexdump.hs  ls.hs  more.hs  squash.hs  strings.hs  tail.hs  tee.hs  tr.hs  tree.hs
src/: cat.hs  comm.hs  head.hs  ls.hs  squash.hs  strings.hs  tail.hs  tee.hs  tr.hs  tree.hs
